Fix sidebar z-index position and height.

--- a/src/components/FabricJS.css
+++ b/src/components/FabricJS.css
@@ -17,6 +17,8 @@
   padding: 10px;
   position: fixed;
   width: 300px;
+  z-index: 1;
+  height: 100vh;
 }
 
 #sidebarFabric div {
